--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-starter-hoodie",
   "private": false,
   "description": "gatsby-starter-hoodie is a gatsby theme developed for developers to write tech blogs.",
-  "homepage": "https://devhudi.github.io/gatsby-starter-hoodie/",
+  "homepage": "https://hgo641.github.io/blog/",
   "version": "0.2.0",
   "author": "Hudi",
   "dependencies": {
